2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move JavaScriptCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=51604

        Update references to JavaScriptCore to point to the new location.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        * DumpRenderTree/qt/DumpRenderTree.pro:
        * DumpRenderTree/qt/ImageDiff.pro:
        * DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro:
        * DumpRenderTree/wscript:
        * Scripts/build-jsc:
        * Scripts/build-webkit:
        * Scripts/do-file-rename:
        * Scripts/do-webcore-rename:
        * Scripts/run-javascriptcore-tests:
        * Scripts/update-javascriptcore-test-results:
        * Scripts/webkitdirs.pm:
        * Scripts/webkitpy/common/config/build_unittest.py:
        * Scripts/webkitpy/style/checker.py:
        * Scripts/webkitpy/style/checker_unittest.py:
        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
        * WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro:
        * WebKitTestRunner/qt/WebKitTestRunner.pro:
        * wx/build/settings.py:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move Sources to Source
        https://bugs.webkit.org/show_bug.cgi?id=51794

        Update scripts to point to the new location.

        * Scripts/build-webkit:
        * Scripts/do-file-rename:
        * Scripts/do-webcore-rename:
        * Scripts/webkitpy/common/config/build.py:
        * Scripts/webkitpy/common/config/build_unittest.py:

2010-12-31  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        [DRT/Chromium] Enable mock spell checker on non-OSX
        https://bugs.webkit.org/show_bug.cgi?id=51401

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::spellCheck):

2010-12-31  Adam Barth  <abarth@webkit.org>

        Reviewed by Ariya Hidayat.

        Remove Tools/Scripts/wkstyle