@@ -392,6 +392,16 @@ sub normalizePath($)
     return $path;
 }
 
+sub adjustPathForRecentRenamings($)
+{
+    my ($fullPath) = @_;
+
+    if ($fullPath =~ m|^JavaScriptCore/|) {
+        return "Source/$fullPath";
+    }
+    return $fullPath;
+}
+
 sub canonicalizePath($)
 {
     my ($file) = @_;
@@ -511,7 +521,7 @@ sub parseGitDiffHeader($$)
         # The first and second paths can differ in the case of copies
         # and renames.  We use the second file path because it is the
         # destination path.
-        $indexPath = $4;
+        $indexPath = adjustPathForRecentRenamings($4);
         # Use $POSTMATCH to preserve the end-of-line character.
         $_ = "Index: $indexPath$POSTMATCH"; # Convert to SVN format.
     } else {
@@ -627,7 +637,7 @@ sub parseSvnDiffHeader($$)
 
     my $indexPath;
     if (/$svnDiffStartRegEx/) {
-        $indexPath = $1;
+        $indexPath = adjustPathForRecentRenamings($1);
     } else {
         die("First line of SVN diff does not begin with \"Index \": \"$_\"");
     }
